Add links, dropdown menu and quick fixes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-3/12 lg:w-3/12 w-full flex-[0_0_auto] px-[12px] max-w-full footer-intro mb-10 ">
 						<div class="logo"><a href="index.html"><img src="images/logo.svg" class="xsm:h-auto h-12 w-auto xsm:w-full" alt="" width="95"></a></div>
-						<a href="https://x.com/Design2Tailwind" class="email tran3s text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[1.67em] mt-[35px] mb-[15px] md:mt-[10px] sm:mt-[10px] xsm:mt-[10px] hover:underline hover:text-black">hello@design2tailwind.com</a> <br>
+						<a href="mailto:hello@design2tailwind.com" class="email tran3s text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[1.67em] mt-[35px] mb-[15px] md:mt-[10px] sm:mt-[10px] xsm:mt-[10px] hover:underline hover:text-[#BC46E2]">hello@design2tailwind.com</a> <br>
 						<a href="#" class=""><img src="images/lazy.svg" data-src="images/icon/icon-twitter.svg" alt="" class="lazy-img h-9"></a>
 					</div>
 					<div class="xl:w-1/5 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto mb-[30px]">
