--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@
 				<button class="navbar-toggler text-[1.25rem] leading-none transition-shadow duration-[0.15s] ease-[ease-in-out] w-11 h-[38px] relative z-[99] block xl:hidden lg:hidden shadow-[0_15px_20px_0px_rgba(0,0,0,0.05)] p-0 border-0 rounded-[.25rem] focus:shadow-none bg-[#BC46E2] before:content-[''] before:absolute before:w-[26px] before:h-0.5 before:pointer-events-none before:transition-transform before:duration-[0.25s] before:origin-[50%_50%] before:left-[9px] before:top-2/4 before:bg-white after:content-[''] after:absolute after:w-[26px] after:h-0.5 after:pointer-events-none after:transition-transform after:duration-[0.25s] after:origin-[50%_50%] after:left-[9px] after:top-2/4 after:bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class=" absolute overflow-hidden w-[26px] h-0.5 indent-[200%] transition-opacity duration-[0.25s] -mt-px left-[9px] bg-white"></span>
 				</button>
-			<div class="collapse navbar-collapse
+			<div class="
 			basis-full grow items-center md:fixed md:bg-white md:h-screen md:max-h-screen md:overflow-y-auto md:clear-both md:w-4/5 md:max-w-[calc(100vw_-_60px)] md:z-[9999] md:-translate-x-full md:block md:transition-all md:duration-[0.3s] md:ease-[ease-in-out] md:p-[32px_15px_20px] md:left-0 md:top-0 md:visible
 			sm:fixed sm:bg-white sm:h-screen sm:max-h-screen sm:overflow-y-auto sm:clear-both sm:w-80 sm:max-w-[calc(100vw_-_60px)] sm:z-[9999] sm:-translate-x-full sm:block sm:transition-all sm:duration-[0.3s] sm:ease-[ease-in-out] sm:p-[32px_15px_20px] sm:left-0 sm:top-0 sm:visible
 			xsm:fixed xsm:bg-white xsm:h-screen xsm:max-h-screen xsm:overflow-y-auto xsm:clear-both xsm:w-80 xsm:max-w-[calc(100vw_-_60px)] xsm:z-[9999] xsm:-translate-x-full xsm:block xsm:transition-all xsm:duration-[0.3s] xsm:ease-[ease-in-out] xsm:p-[32px_15px_20px] xsm:left-0 xsm:top-0 xsm:visible" id="navbarNav">
@@ -27,10 +27,11 @@
 				</li>
 				<li class="relative">
 					<a href="#" class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] ">Services</a>
-					<div class="bg-black w-40 absolute z-[999] top-10">
-						<ul>
-							<li><a  href="/figma-to-tailwind" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-details.html">Figma to Tailwind CSS</a></li>
-							<li><a href="/for-agencies" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-details.html">For agencies</a></li>
+					<!-- HIDDEN DROPDOWN MENU -->
+					<div class="bg-white w-56 absolute z-[999] top-14 left-6 border border-[#e4e2e8] shadow-lg p-4 hidden">
+						<ul class="space-y-3">
+							<li><a  href="/figma-to-tailwind" class="text-base transition-all duration-[0.3s] ease-[ease-in-out] hover:text-[#BC46E2] hover:underline">Figma to Tailwind CSS</a></li>
+							<li><a href="/for-agencies" class="text-base transition-all duration-[0.3s] ease-[ease-in-out] hover:text-[#BC46E2] hover:underline">For agencies</a></li>
 						</ul>
 					</div>
 				</li>
