--- a/src/pages/figma-to-tailwind.astro
+++ b/src/pages/figma-to-tailwind.astro
@@ -7,12 +7,13 @@ import Footer from '@components/Footer.astro';
 <Layout title='Astro'>
 	<Header />
 
-	<div class="hero-banner-two relative pt-36 lg:pt-44 xl:pt-52 xl:pb-24 lg:pb-20 md:pb-16 pb-12">
+	<div class="hero-banner-two relative pt-32 lg:pt-40 xl:pt-48 xl:pb-24 lg:pb-20 md:pb-16 pb-12">
 		<div class="container">
-			<div class="flex flex-wrap">
-				<div class="xl:w-8/12 lg:w-8/12 md:w-9/12 w-full flex-[0_0_auto] px-[12px] max-w-full m-auto text-center wow fadeInUp">
-					<h1 class="hero-heading font-normal font-Recoleta relative text-[82px] 2xl:text-[70px] lg:text-[58px] md:text-[40px] md:leading-[1.2em] sm:text-[40px] sm:leading-[1.2em] xsm:text-4xl xsm:leading-[1.2em] leading-[1.09em]"><img src="images/lazy.svg" data-src="images/shape/shape_25.svg" alt="" class="lg:w-40 xl:w-56 lazy-img shapes line-shape absolute z-[-1] left-16 -bottom-4 md:!hidden sm:!hidden xsm:!hidden">Figma <span class="relative inline-block z-[1] before:content-[''] before:absolute before:-translate-y-2/4 before:w-[73%] before:h-[81%] before:z-[-1] before:left-[31%] before:top-2/4 before:bg-[#FFEBE5]">to</span> Tailwind.</h1>
-					<p class=" text-base xl:text-xl lg:text-[19px] leading-[1.67em] xl:pt-10 lg:pt-[10px] md:pt-[10px] sm:pt-[10px] xsm:pt-[10px]">Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us.
+			<img src="images/logo/logo-figma.png" alt="" class="lazy-img h-10 md:h-12 lg:h-16 xl:h-16 mx-auto">
+			<div class="flex flex-wrap pt-7">
+				<div class="w-full lg:w-5/6 xl:w-2/3 mx-auto text-center wow fadeInUp">
+					<h1 class="hero-heading font-normal font-Recoleta relative text-[82px] 2xl:text-[70px] lg:text-[58px] md:text-[40px] md:leading-[1.2em] sm:text-[40px] sm:leading-[1.2em] xsm:text-4xl xsm:leading-[1.2em] leading-[1.09em]"><img src="images/lazy.svg" data-src="images/shape/shape_25.svg" alt="" class="lg:w-40 xl:w-56 lazy-img shapes line-shape absolute z-[-1] left-16 lg:left-40 xl:left-24 -bottom-4 md:!hidden sm:!hidden xsm:!hidden">Figma <span class="relative inline-block z-[1] before:content-[''] before:absolute before:-translate-y-2/4 before:w-[73%] before:h-[81%] before:z-[-1] before:left-[31%] before:top-2/4 before:bg-[#FFEBE5]">to</span> Tailwind.</h1>
+					<p class=" text-base xl:text-xl lg:text-[19px] leading-[1.67em] xl:pt-10 lg:pt-7 md:pt-[10px] sm:pt-[10px] xsm:pt-[10px]">Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us.
 					</p>
 				</div>
 			</div>
@@ -22,7 +23,7 @@ import Footer from '@components/Footer.astro';
 	<div class="fancy-feature-five xl:mb-24 lg:mb-20 md:mb-16 mb-12">
 		<div class="container">
 			<div class="flex flex-wrap items-center">
-				<div class="xl:w-[45%] lg:w-[45%] md:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-last lg:order-last md:order-last !ml-auto">
+				<div class="xl:w-[45%] lg:w-[45%] md:w-6/12 w-full flex-[0_0_auto] pl-[12px] max-w-full xl:order-last lg:order-last md:order-last !ml-auto">
 					<div class="block-style-two xxl:!pr-[3rem] sm:mb-[50px] xsm:mb-[50px]  wow fadeInRight">
 						<div class="title-style-three">
 							<div class="sc-title uppercase text-[14px] lg:text-[13px] md:text-[13px] sm:text-[13px] xsm:text-[13px] tracking-[1px] text-[rgba(0,0,0,0.3)] pb-2.5">Over <span class=" underline " style="color:#a056fa;">100+ clients</span></div>
@@ -33,7 +34,7 @@ import Footer from '@components/Footer.astro';
 					</div> <!-- /.block-style-two -->
 				</div>
 
-				<div class="xl:w-6/12 lg:w-6/12 md:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-first lg:order-first md:order-first wow fadeInLeft">
+				<div class="xl:w-6/12 lg:w-6/12 md:w-6/12 w-full flex-[0_0_auto] pr-[12px] max-w-full xl:order-first lg:order-first md:order-first wow fadeInLeft">
 					<div class="tags-wrapper relative p-[45px_65px_50px] 2xl:p-[35px_35px_40px] lg:p-[25px_15px_30px] md:p-[25px_15px_30px] sm:p-[25px_15px_30px] xsm:p-[25px_15px_30px] rounded-[25px] bg-[#F3F7F8]">
 						<img src="images/lazy.svg" data-src="images/shape/shape_35.svg" alt="" class="lazy-img shapes shape-one absolute w-3/12 z-0 animate-[jumpThree_3s_infinite_linear] right-[1%] top-[1%]">
 						<div class="h3 !m-0 font-normal text-black ">13+</div>
@@ -308,7 +309,7 @@ import Footer from '@components/Footer.astro';
 		</div>
 	</div>
 
-	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32">
+	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32 relative z-30">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
 				<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
