--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ import Footer from '@components/Footer.astro';
 						We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.
 					</p>
 					<div class="flex flex-col gap-3 sm:gap-6 md:gap-6 lg:gap-6 xl:gap-6 xs:flex-row sm:flex-row md:flex-row lg:flex-row xl:flex-row justify-center items-center">
-						<a href="contact-us.html" class="tran3s text-[17px] font-medium btn-three text-white leading-[52px] relative transition-all duration-[0.3s] ease-[ease-in-out] p-[0_40px] rounded-[28px] bg-[#BC46E2] hover:bg-[#4e257e] md:p-[0_35px] md:leading-[48px] sm:p-[0_35px] sm:leading-[48px] xsm:p-[0_35px] xsm:leading-[48px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px]">Get a Quote</a>
-						<a href="contact-us.html" class="tran3s text-[17px] font-medium btn-three leading-[52px] relative transition-all duration-[0.3s] ease-[ease-in-out] p-[0_40px] rounded-[28px] border border-[#4e257e] text-[#4e257e] hover:bg-[#4e257e] hover:text-white md:p-[0_35px] md:leading-[48px] sm:p-[0_35px] sm:leading-[48px] xsm:p-[0_35px] xsm:leading-[48px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px]">Learn More</a>
+						<a href="/#quote" class="tran3s text-[17px] font-medium btn-three text-white leading-[52px] relative transition-all duration-[0.3s] ease-[ease-in-out] p-[0_40px] rounded-[28px] bg-[#BC46E2] hover:bg-[#4e257e] md:p-[0_35px] md:leading-[48px] sm:p-[0_35px] sm:leading-[48px] xsm:p-[0_35px] xsm:leading-[48px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px]">Get a Quote</a>
+						<a href="/#process" class="tran3s text-[17px] font-medium btn-three leading-[52px] relative transition-all duration-[0.3s] ease-[ease-in-out] p-[0_40px] rounded-[28px] border border-[#4e257e] text-[#4e257e] hover:bg-[#4e257e] hover:text-white md:p-[0_35px] md:leading-[48px] sm:p-[0_35px] sm:leading-[48px] xsm:p-[0_35px] xsm:leading-[48px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px]">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -103,12 +103,12 @@ import Footer from '@components/Footer.astro';
 		</div> <!-- /.container -->
 	</div>
 
-	<div class="fancy-feature-six relative">
+	<div class="fancy-feature-six relative" id="process">
 		<div class="container">
 			<div class="flex flex-wrap items-center">
 				<div class="xl:w-4/12 lg:w-4/12 md:w-6/12 mt-10 w-full flex-[0_0_auto] px-[12px] max-w-full wow fadeInUp">
 					<div class="">
-						<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Let’s <br> <span class="inline-block relative z-[1]">Discover <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#E1EDFF;"></span></span> our all features</h2>
+						<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Let’s <br> <span class="inline-block relative z-[1]">Discover <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#E1EDFF;"></span></span> our process</h2>
 						<span class="mt-6 md:mt-12 lg:mt-12 xl:mt-12 block w-28 bg-black h-[3px]"></span>
 					</div> <!-- /.title-style-three -->
 				</div>
@@ -524,7 +524,7 @@ import Footer from '@components/Footer.astro';
 		</div>
 	</div>
 
-	<div class="blog-section-five mb-36">
+	<div class="blog-section-five mb-36 relative z-30">
 		<div class="container">
 			<div class="relative">
 				<div class="flex flex-wrap mx-[-12px]">
@@ -563,7 +563,7 @@ import Footer from '@components/Footer.astro';
 				</div>
 
 				<div class="btn-holder text-center absolute right-0 top-4 sm:relative sm:top-0 md:top-1 lg:top-0 xsm:relative">
-					<div class="btn-eighteen relative inline-block text-black xsm:mt-6 sm:mt-12 md:mt-0 text-[17px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[initial] before:content-[''] before:absolute before:h-0.5 before:w-full before:left-0 before:-bottom-1 before:bg-black"><a href="blog-v3.html" class="font-gordita font-medium tran3s hover:text-[#BC46E2]">Check our all news <i class="fa-solid fa-angle-right text-[15px]"></i></a></div>
+					<div class="btn-eighteen relative inline-block text-black xsm:mt-6 sm:mt-12 md:mt-0 text-[17px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[initial] before:content-[''] before:absolute before:h-0.5 before:w-full before:left-0 before:-bottom-1 before:bg-black"><a href="/blog" class="font-gordita font-medium tran3s hover:text-[#BC46E2]">Check our all news <i class="fa-solid fa-angle-right text-[15px]"></i></a></div>
 				</div>
 			</div>
 		</div>
