--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -43,7 +43,7 @@ import Footer from '@components/Footer.astro';
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
 										<div class="price  text-black  text-[28px] lg:text-[26px] md:text-[26px] sm:text-[26px] xsm:text-[26px] ">$9.99</div>
 										<div class="trial-text text-[17px] opacity-75 mb-[30px]">up to 3 user + 1.99 per user</div>
-										<a href="#" class="btn-twelve font-medium tran3s leading-[43px] border border-[#BC46E2] text-[#BC46E2] px-[45px] py-0 rounded-[23px] border-solid hover:text-white hover:bg-[#BC46E2]">Learn More</a>
+										<a href="#" class="btn-twelve font-medium tran3s leading-[43px] border border-[#BC46E2] text-[#BC46E2] px-[45px] py-0 rounded-[23px] border-solid hover:text-white hover:bg-[#BC46E2]">Get Started</a>
 									</div>
 								</div> <!-- /.pr-column -->
 								</div>
@@ -81,7 +81,7 @@ import Footer from '@components/Footer.astro';
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
 										<div class="price  text-black  text-[28px] lg:text-[26px] md:text-[26px] sm:text-[26px] xsm:text-[26px] ">$29.99</div>
 										<div class="trial-text text-[17px] opacity-75 mb-[30px]">up to 7 user + 1.99 per user</div>
-										<a href="#" class="btn-twelve font-medium tran3s leading-[43px] border border-[#BC46E2] text-[#BC46E2] px-[45px] py-0 rounded-[23px] border-solid hover:text-white hover:bg-[#BC46E2]">Learn More</a>
+										<a href="#" class="btn-twelve font-medium tran3s leading-[43px] border border-[#BC46E2] text-[#BC46E2] px-[45px] py-0 rounded-[23px] border-solid hover:text-white hover:bg-[#BC46E2]">Get Started</a>
 									</div>
 								</div> <!-- /.pr-column -->
 								</div>
@@ -99,7 +99,7 @@ import Footer from '@components/Footer.astro';
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
 										<div class="price  text-black  text-[28px] lg:text-[26px] md:text-[26px] sm:text-[26px] xsm:text-[26px] ">$59.99</div>
 										<div class="trial-text text-[17px] opacity-75 mb-[30px]">up to 10 user + 1.99 per user</div>
-										<a href="#" class="btn-twelve font-medium tran3s leading-[43px] border border-[#BC46E2] text-[#BC46E2] px-[45px] py-0 rounded-[23px] border-solid hover:text-white hover:bg-[#BC46E2]">Learn More</a>
+										<a href="#" class="btn-twelve font-medium tran3s leading-[43px] border border-[#BC46E2] text-[#BC46E2] px-[45px] py-0 rounded-[23px] border-solid hover:text-white hover:bg-[#BC46E2]">Get Started</a>
 									</div>
 								</div> <!-- /.pr-column -->
 								</div>
@@ -249,7 +249,7 @@ import Footer from '@components/Footer.astro';
 		</div>
 	</div>
 
-	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32">
+	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32 relative z-30">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
 				<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
