--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -101,11 +101,13 @@ import Footer from '@components/Footer.astro';
 		</div> <!-- /.container -->
 	</div>
 
-	<div class="fancy-feature-fiftyNine relative mt-16 sm:mt-20 md:mt-20 lg:mt-20 xl:mt-28 xl:mb-36 lg:mb-28 mb-24 wow fadeInUp">
+	<div class="fancy-feature-fiftyNine relative mt-16 sm:mt-20 md:mt-20 lg:mt-20 xl:mt-28 xl:mb-36 lg:mb-28 mb-24 wow fadeInUp z-30">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
 				<h2 class="main-title font-Recoleta font-normal  text-black  tracking-[0] leading-[1.17em] 2xl:text-[54px] md:text-[35px] sm:text-[35px] xsm:text-[35px] ">What matters most: <span class="relative"> Our Values.<img class=" absolute z-[-1] right-0 bottom-1" src="images/shape/shape_188.svg" alt=""></span></h2>
-				<p class=" text-[24px] 2xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px]  text-black text-center  !leading-[2]  mt-[25px]  md:mt-5 sm:mt-5 xsm:mt-5 wow fadeInUp">At jano, we’ve seen again and again how the seemingly simple act of creating can be a force for growth, change,and discovery in people’s lives. We want to inspire and multiply the kind of creative exploration that furthers expression, learning and application.</p>
+				<div class="md:w-5/6 lg:w-5/6 xl:w-5/6 mx-auto">
+					<p class="text-base xl:text-xl lg:text-[19px] leading-[1.67em] mt-[25px]  md:mt-5 sm:mt-5 xsm:mt-5 wow fadeInUp">At jano, we’ve seen again and again how the seemingly simple act of creating can be a force for growth, change,and discovery in people’s lives. We want to inspire and multiply the kind of creative exploration that furthers expression, learning and application.</p>
+				</div>
 			</div>
 
 			<div class="card-wrapper  pt-[45px] lg:pt-5 md:pt-5 sm:pt-5 xsm:pt-5 pb-[55px] lg:pb-[30px] md:pb-[30px] sm:pb-[30px] xsm:pb-[30px] mt-[85px] lg:mt-[50px] md:mt-[50px] sm:mt-[50px] xsm:mt-[50px] border-y-2 border-y-black border-solid">
