--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -25,12 +25,12 @@ import Footer from '@components/Footer.astro';
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="container relative z-30">
 		<div class="lg:w-5/6 xl:w-5/6 mb-20">
 			<div class="flex flex-col gap-8">
 				<a
 					href="/post"
-					class="border-[#b1b2f4] group flex flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
+					class="border-[#b1b2f4] bg-white group flex flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
 						<div class="flex">
@@ -64,7 +64,7 @@ import Footer from '@components/Footer.astro';
 				</a>
 				<a
 					href="/post"
-					class="border-[#b1b2f4] flex group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
+					class="border-[#b1b2f4] bg-white flex group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
 						<div class="flex">
@@ -98,7 +98,7 @@ import Footer from '@components/Footer.astro';
 				</a>
 				<a
 					href="/post"
-					class="border-[#b1b2f4] flex group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
+					class="border-[#b1b2f4] flex bg-white group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
 						<div class="flex">
