--- a/src/pages/for-agencies.astro
+++ b/src/pages/for-agencies.astro
@@ -10,7 +10,7 @@ import Footer from '@components/Footer.astro';
 	<div class="hero-banner-two relative pt-36 lg:pt-44 xl:pt-52 xl:pb-24 lg:pb-20 md:pb-16 pb-12">
 		<div class="container">
 			<div class="flex flex-wrap">
-				<div class="xl:w-8/12 lg:w-8/12 md:w-9/12 w-full flex-[0_0_auto] px-[12px] max-w-full m-auto text-center wow fadeInUp">
+				<div class="w-full lg:w-5/6 xl:w-2/3 mx-auto text-center wow fadeInUp">
 					<h1 class="hero-heading font-normal font-Recoleta relative text-[82px] 2xl:text-[70px] lg:text-[58px] md:text-[40px] md:leading-[1.2em] sm:text-[40px] sm:leading-[1.2em] xsm:text-4xl xsm:leading-[1.2em] leading-[1.09em]"><img src="images/lazy.svg" data-src="images/shape/shape_25.svg" alt="" class="lg:w-36 xl:w-36 lazy-img shapes line-shape absolute z-[-1] left-28 xl:left-40 -bottom-1 md:!hidden sm:!hidden xsm:!hidden">For <span class="relative inline-block z-[1] before:content-[''] before:absolute before:-translate-y-2/4 before:w-[73%] before:h-[81%] before:z-[-1] before:left-[31%] before:top-2/4 before:bg-[#FFEBE5]">Agencies</span></h1>
 					<p class=" text-base xl:text-xl lg:text-[19px] leading-[1.67em] xl:pt-10 lg:pt-[10px] md:pt-[10px] sm:pt-[10px] xsm:pt-[10px]">Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us.
 					</p>
@@ -341,7 +341,7 @@ import Footer from '@components/Footer.astro';
 		</div>
 	</div>
 
-	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32">
+	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32 relative z-30">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
 				<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
